--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,5 @@ services:
 script:
 - echo "trying without tests!"
 after_success:
-- docker_push.sh
-- ecs_deploy.sh
+- bash docker_push.sh
+- bash ecs_deploy.sh
